--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_kategorie_produkte.html
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_kategorie_produkte.html
@@ -1,4 +1,4 @@
-<table border="0" cellpadding="0" style="border-collapse: collapse; border-left-style:solid; border-left-width:1px; border-right-width:1px; border-top-width:1px; border-bottom-width:1px" bordercolor="#111111" width="100%" >
+<table border="0" cellpadding="0" width="100%" >
 	<tr>
 		<td height="1" valign="top">[PRODUCTLIST] </td>
 	</tr>
