--- a/IntraSell_WebShop/skins/skin_nca/pages/account/myAccount_Information.htm
+++ b/IntraSell_WebShop/skins/skin_nca/pages/account/myAccount_Information.htm
@@ -1,39 +1,25 @@
-<div align="center">
-	<center>
-	<table border="0" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#111111" width="1024" id="AutoNumber26" height="1" bgcolor="#ffffff">
-		<tr>
-			<td width="20%" height="13">&nbsp; </td>
-			<td width="60%" height="13"></td>
-			<td width="20%" height="13"></td>
-		</tr>
-		<tr>
-			<td width="20%" valign="top" height="1">
-			<div align="center">
-				<center>[FUNCTION2]</center></div>
-			</td>
-			<td width="80%" height="2" valign="top" colspan="2" rowspan="2">
+ 
 			<table border="0" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#111111" width="90%" id="AutoNumber75">
+			
 				<tr>
-					<td width="33%"><b>
-					<font size="2" face="Verdana" color="#db0f21">MEINE ADRESSEN</font></b>
+					<td width="100%" class="boxedText"><b>
+					MEINE ADRESSEN</b>
 					</td>
-					<td width="33%">&nbsp; </td>
-					<td width="34%">&nbsp; </td>
+				</tr>	<tr>
+					<td width="100%" >&nbsp;</td>
 				</tr>
 				<tr>
-					<td width="100%" colspan="3">
+					<td width="100%">
 					<table border="0" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#111111" width="100%" id="AutoNumber76" height="1">
 						<tr>
-							<td width="50%" height="1" valign="top"><br>
-							<br>
-&nbsp; </td>
+							<td width="50%" height="1" valign="top"> </td>
 							<td width="50%" height="1" valign="top"></td>
 						</tr>
 						<tr>
 							<td width="50%" height="68" valign="top">
 							<div align="center">
 								<center>
-								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77" class="boxedText">
+								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" width="80%" id="AutoNumber77" class="boxedText">
 									<tr>
 										<th width="100%" bgcolor="#f3f3f3">[TRANSLATION:Hauptadresse]</th>
 									</tr>
@@ -73,10 +59,10 @@
 							<td width="50%" height="68" valign="top">
 							<div align="center">
 								<center>
-								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77">
+								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77" class="boxedText">
 									<tr>
-										<th width="100%" bgcolor="#f3f3f3"><b>&nbsp;<font color="#666666">Passwort 
-										und Email ändern</font></b> </th>
+										<th width="100%" bgcolor="#f3f3f3"><b>&nbsp;Passwort 
+										und Email ändern</b> </th>
 									</tr>
 									<tr>
 										<td width="77%">
@@ -89,7 +75,7 @@
 											<tr>
 												<td height="13" class="style1" width="24">
 												<b>&nbsp;
-												<img height="13" src="../images/button/doc.gif" width="11" border="0"></b>
+												<img height="13" src="../images/buttons/doc.gif" width="11" border="0"></b>
 												</td>
 												<td width="255" height="13">&nbsp; 
 												Mein Passwort hier
@@ -105,7 +91,7 @@
 											<tr>
 												<td class="style1" width="24">
 												<b>&nbsp;
-												<img height="13" src="../images/button/doc.gif" width="11" border="0"></b>
+												<img height="13" src="../images/buttons/doc.gif" width="11" border="0"></b>
 												</td>
 												<td width="255">&nbsp;Mein Email 
 												hier
@@ -137,10 +123,10 @@
 							<td width="50%" height="11" valign="top">
 							<div align="center">
 								<center>
-								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77">
+								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77"  class="boxedText">
 									<tr>
 										<th width="100%" bgcolor="#f3f3f3"><b>
-										<font color="#666666">&nbsp;Rechnungsadresse</font></b>
+										&nbsp;Rechnungsadresse</b>
 										</th>
 									</tr>
 									<tr>
@@ -177,11 +163,11 @@
 							<td width="50%" height="11" valign="top">
 							<div align="center">
 								<center>
-								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77">
+								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77"  class="boxedText">
 									<tr>
-										<td width="100%" bgcolor="#f3f3f3"><b>
-										<font color="#666666">&nbsp;Lieferungsadresse</font></b>
-										</td>
+										<th width="100%" bgcolor="#f3f3f3"><b>
+										&nbsp;Lieferungsadresse</b>
+										</th>
 									</tr>
 									<tr>
 										<td width="100%">
@@ -222,17 +208,11 @@
 							<b><br>
 							<br>
 							<a href="default.asp?pageToShow=MyAccount">&lt;&lt; Zurück 
-							zu MEIN ACCOUNT</b> </a></p>
+							zu MEIN ACCOUNT</a></b><a href="default.asp?pageToShow=MyAccount"> </a></p>
 							</td>
 						</tr>
 					</table>
 					</td>
 				</tr>
 			</table>
-			</td>
-		</tr>
-		<tr>
-			<td width="20%" height="1"></td>
-		</tr>
-	</table>
-	</center></div>
+ 
