--- a/trunk/IntraSell_WebShop/default.htm
+++ b/trunk/IntraSell_WebShop/default.htm
@@ -1,9 +1,9 @@
 <HTML>
 
 <head>
-<title>Shop</title>
+<title>IntraSell powered Shop</title>
 <link REL="stylesheet" HREF="style.css" TYPE="text/css">
-<meta name="Keywords" content="InraSell, Tonkov, Intrasoft, Noxel">
+<meta name="Keywords" content="InraSell, Tonkov, Intrasoft, GriTon, IS">
 </head>
 <hr width="80%">
 <div align="center">
@@ -30,8 +30,8 @@
   </center>
 </div>
 <hr width="80%">
-<p align="center">This Web Shop&nbsp;is powered by <a href="default.html"><img border="0" src="isell_verysmall.gif" width="100" height="40"></a>
- 3, Grigor Tonkov 2002 - 2009 (R), , <a href="http://www.griton.eu">http://www.griton.eu</a></p>
+<p align="center">This Web Shop&nbsp;is powered by <a href="default.html"><img border="0" src="isell_verysmall.gif" alt="IntraSell Logo"></a>
+ 3, Grigor Tonkov 2002 - 2009 (R), <a href="http://www.griton.eu">http://www.griton.eu</a></p>
 
 </HTML>
 
