--- a/trunk/IntraSell_WebShop/skins/skin_nca/emails/email_order_confirmation-b.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/emails/email_order_confirmation-b.htm
@@ -1,7 +1,7 @@
 <HTML>
 
 <head>
-<title>arfaian.com</title>
+<title>www.nuts-creeck-archery.com</title>
 <style>
 <!--
 div.Section1
@@ -43,8 +43,8 @@ Hier Ihre Bestellungsdaten:
 	<p style="MARGIN-LEFT: 35.4pt"><font face="Verdana" color="black" size="2">
 	<span style="FONT-SIZE: 10pt; FONT-FAMILY: Verdana">Falls Sie noch Fragen 
 	haben, bzw. weitere Information benötigen, können Sie uns gerne unter
-	<a title="mailto:online@arfaian.com" style="color: black; text-decoration: underline; text-underline: single" href="mailto:online@arfaian.com">
-	online@arfaian.com</a> oder 0043 732 660101 kontaktieren.&nbsp;</span></font></p>
+	<a title="mailto:online@www.nuts-creeck-archery.com" style="color: black; text-decoration: underline; text-underline: single" href="mailto:online@www.nuts-creeck-archery.com">
+	online@www.nuts-creeck-archery.com</a> oder 0043 732 660101 kontaktieren.&nbsp;</span></font></p>
 	<p style="MARGIN-LEFT: 35.4pt"><font face="Verdana" color="black" size="2">
 	<span style="FONT-SIZE: 10pt; FONT-FAMILY: Verdana">Wenn Sie als Zahlungsart
 	<b><i><span style="FONT-WEIGHT: bold; FONT-STYLE: italic">VORAUSKASSE</span></i></b> 
@@ -88,7 +88,7 @@ Hier Ihre Bestellungsdaten:
 	<span style="FONT-WEIGHT: bold; FONT-STYLE: italic">PAYPAL</span></i></b> 
 	gewählt haben, erhalten Sie von uns noch eine Auftragsbestätigung mit den 
 	weiteren Informationen! Unser Paypalkonto lautet auf die Email Adresse
-    <a href="mailto:online@arfaian.com">online@arfaian.com</a>. <br>
+    <a href="mailto:online@www.nuts-creeck-archery.com">online@www.nuts-creeck-archery.com</a>. <br>
 	<br>
 	Bitte beachten Sie, dass <span class="SpellE"><b>
 	<span style="FONT-WEIGHT: bold">NACHNAHME-Sendungen</span></b></span> nur 
@@ -97,7 +97,7 @@ Hier Ihre Bestellungsdaten:
 	<span style="FONT-SIZE: 10pt; FONT-FAMILY: Verdana">Wir wünschen Ihnen viel 
 	Freude mit unseren Produkten!</span></font></p>
 	<p style="MARGIN-LEFT: 35.4pt"><font face="Verdana" color="black" size="2">
-	<span style="FONT-SIZE: 10pt; FONT-FAMILY: Verdana">Ihr arfaian.com Team</span></font></p>
+	<span style="FONT-SIZE: 10pt; FONT-FAMILY: Verdana">Ihr www.nuts-creeck-archery.com Team</span></font></p>
 	<p class="MsoNormal"><font face="Times New Roman" color="black" size="3">
 	<span style="FONT-SIZE: 12pt">&nbsp;</span></font></div>
 
