--- a/trunk/IntraSell_WebShop/skins/skin_nca/emails/email_order_confirmation_stk.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/emails/email_order_confirmation_stk.htm
@@ -1,7 +1,7 @@
 <HTML>
 
 <head>
-<title>arfaian.com</title>
+<title>www.nuts-creeck-archery.com</title>
 <style>
 <!--
 div.Section1
@@ -37,7 +37,7 @@ Hier Ihre Bestellungsdaten:
 </font><font size='2' face='Verdana'><br>
 </font><font face='Verdana' color='black' size='2'>
 <span style='font-size: 10pt; font-family: Verdana'>Sie haben diese eMail 
-erhalten, weil Sie kürzlich eine Bestellung bei arfaian.com getätigt haben. 
+erhalten, weil Sie kürzlich eine Bestellung bei www.nuts-creeck-archery.com getätigt haben. 
 Diese Bestellbestätigung wird automatisch generiert.
 	<span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'>Wir möchten Sie noch 
 einmal darauf hinweisen, dass diese Bestätigung keine</span></span></font><span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'><font face='Verdana' color='black' size='2'>
@@ -53,8 +53,8 @@ jemand an der angeführten Lieferadresse erreichbar ist!</font></b></p>
 <font face='Verdana' color='black' size='2'>
 	<span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'>Falls Sie noch Fragen 
 	haben, bzw. weitere Information benötigen, können Sie uns gerne unter
-	<a title='mailto:online@arfaian.com' style='color: black; text-decoration: underline; text-underline: single' href='mailto:online@arfaian.com'>
-	online@arfaian.com</a> oder 0043 732 660101 kontaktieren.&nbsp;</span></font></p>
+	<a title='mailto:online@www.nuts-creeck-archery.com' style='color: black; text-decoration: underline; text-underline: single' href='mailto:online@www.nuts-creeck-archery.com'>
+	online@www.nuts-creeck-archery.com</a> oder 0043 732 660101 kontaktieren.&nbsp;</span></font></p>
 <p>
 
 <font size='2'><span style='font-family: Verdana'>Falls</span></font><font face='Verdana' color='black' size='2'><span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'> Sie als Zahlungsart
@@ -101,7 +101,7 @@ jemand an der angeführten Lieferadresse erreichbar ist!</font></b></p>
 	<span style='FONT-WEIGHT: bold; FONT-STYLE: italic'>PAYPAL</span></i></b> 
 	gewählt haben, erhalten Sie von uns noch eine Auftragsbestätigung mit den 
 	weiteren Informationen! Unser Paypalkonto lautet auf die Email Adresse
-    <a href='mailto:online@arfaian.com'>online@arfaian.com</a>. <br>
+    <a href='mailto:online@www.nuts-creeck-archery.com'>online@www.nuts-creeck-archery.com</a>. <br>
 	<br>
 	Bitte beachten Sie, dass <span class='SpellE'><b>
 	<span style='FONT-WEIGHT: bold'>NACHNAHME-Sendungen</span></b></span> nur 
@@ -115,7 +115,7 @@ jemand an der angeführten Lieferadresse erreichbar ist!</font></b></p>
     </span><span style='font-size: 10pt; font-family: Verdana'>Die Firma Arfaian 
     Export-Import Handelsgesellschaft m.b.H. liefert ausschließlich auf 
     Grundlage der aktuell gültigen
-    <a title='http://www.diskontcomputer.com/' href='http://www.arfaian.com/download/AGB_arfaian.pdf'>
+    <a title='http://www.diskontcomputer.com/' href='http://www.nuts-creeck-archery.com/download/AGB_arfaian.pdf'>
     Allgemeinen Geschäftsbedingungen</a>. <br>
     Angebot gültig solange der Vorrat reicht. Irrtümer und Änderungen 
     vorbehalten.<br>
@@ -126,8 +126,8 @@ jemand an der angeführten Lieferadresse erreichbar ist!</font></b></p>
     Tel.: +43 (0) 732 660101<br>
     </font>Fax: +43 (0) 732 660101-40<br>
     Website:
-    <a href='http://www.arfaian.com' style='color: blue; text-decoration: underline; text-underline: single'>
-    www.arfaian.com</a><br>
+    <a href='http://www.nuts-creeck-archery.com' style='color: blue; text-decoration: underline; text-underline: single'>
+    www.nuts-creeck-archery.com</a><br>
     Firmensitz: Blütenstrasse 21, A-4040 Linz, Austria<br>
     Verkauf: Fröbelstrasse 24, A-4020 Linz, Austria<br>
     Firmenbuchnummer: 82801t<br>
