--- a/trunk/IntraSell_WebShop/skins/skin_nca/emails/email_send_password.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/emails/email_send_password.htm
@@ -5,11 +5,11 @@
 	<BODY>
 		<p class="MsoNormal"><font size="2">
 		<a target="_blank" href="http://www.immobilienfox.com">
-		<img border="0" src="http://www.arfaian.com/skins/skin_arfaian/images/small_logos/brand.gif" align="right" width="161" height="26"></a></font><font face="Verdana" size="1">Sehr 
+		<img border="0" src="http://www.nuts-creeck-archery.com/skins/skin_arfaian/images/small_logos/brand.gif" align="right" width="161" height="26"></a></font><font face="Verdana" size="1">Sehr 
 		[Begruessung] [Anrede] [Titel] [Vorname] [Nachname] ! <br>
 		<br>
 		<br>
-		Ihre Zugangsdaten für www.arfaian.com
+		Ihre Zugangsdaten für www.nuts-creeck-archery.com
 		sind:<br>
 		<br>
 		Email: <b><font color="#B52C21">[Email]</font></b><br>
@@ -18,7 +18,7 @@
 		<font face="Verdana" size="1">Link zu Ihrer persönlichen 
 		Benutzeroberfläche:</font><br>
 		<font size="1" face="Verdana">
-		<a href="http://www.arfaian.com/default.asp?PageToShow=MyAccount">http://www.arfaian.com/default.asp?PageToShow=MyAccount</a></font></p>
+		<a href="http://www.nuts-creeck-archery.com/default.asp?PageToShow=MyAccount">http://www.nuts-creeck-archery.com/default.asp?PageToShow=MyAccount</a></font></p>
 		<p class="MsoNormal"><font face="Verdana" size="1">Wir danken Ihnen für 
 		Ihre Zusammenarbeit!<br>
 		<br>
