--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/account/myAccountLogin.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/account/myAccountLogin.htm
@@ -35,7 +35,7 @@
 									</tr>
 									<tr>
 										<td width="100%" colspan="3">Falls Sie sich 
-										bereits bei arfaian.com registriert haben, 
+										bereits bei www.nuts-creeck-archery.com registriert haben, 
 										geben Sie bitte ihre eMail Adresse und Passwort 
 										ein:<br>
 &nbsp; </td>
@@ -129,7 +129,7 @@ function PasswordSend() {
 								<tr>
 									<td width="100%">
 									<div align="left">
-										Sie sind noch kein Kunde bei arfaian.com, 
+										Sie sind noch kein Kunde bei www.nuts-creeck-archery.com, 
 										dann registrieren Sie sich jetzt.<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber9">
 											<tr>
 												<td width="100%">
