--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/account/myAccount_Information.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/account/myAccount_Information.htm
@@ -3,7 +3,7 @@
 			
 				<tr>
 					<td width="100%" class="boxedText"><b>
-					MEINE ADRESSEN</b>
+					[TRANSLATION:MEINE ADRESSEN]</b>
 					</td>
 				</tr>	<tr>
 					<td width="100%" >&nbsp;</td>
@@ -61,8 +61,7 @@
 								<center>
 								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77" class="boxedText">
 									<tr>
-										<th width="100%" bgcolor="#f3f3f3"><b>&nbsp;Passwort 
-										und Email ändern</b> </th>
+										<th width="100%" bgcolor="#f3f3f3"><b>[TRANSLATION:Passwort und Email]</b> </th>
 									</tr>
 									<tr>
 										<td width="77%">
@@ -126,7 +125,7 @@
 								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77"  class="boxedText">
 									<tr>
 										<th width="100%" bgcolor="#f3f3f3"><b>
-										&nbsp;Rechnungsadresse</b>
+										[TRANSLATION:Rechnungsadresse]</b>
 										</th>
 									</tr>
 									<tr>
@@ -166,7 +165,7 @@
 								<table border="1" cellpadding="0" cellspacing="0" style="BORDER-COLLAPSE: collapse" bordercolor="#c0c0c0" width="80%" id="AutoNumber77"  class="boxedText">
 									<tr>
 										<th width="100%" bgcolor="#f3f3f3"><b>
-										&nbsp;Lieferungsadresse</b>
+										[TRANSLATION:Lieferungsadresse]</b>
 										</th>
 									</tr>
 									<tr>
