--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/map.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/map.htm
@@ -35,7 +35,7 @@
            <p align="center">
            <font face='Verdana' size='1'><span lang='EN-US'><br>
  </span></font>
-           <img border='0' src='http://www.arfaian.com/skins/skin_arfaian/pages/arfaian-map-l.gif' width="600" height="614"></td>
+           <img border='0' src='http://www.nuts-creeck-archery.com/skins/skin_arfaian/pages/arfaian-map-l.gif' width="600" height="614"></td>
          </tr>
          <tr>
            <td width='37%'  height='1'>
