--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_AGB.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_AGB.htm
@@ -22,7 +22,7 @@
                             <table border='0' width='96%' id='table30' cellspacing='0' cellpadding='0'>
                                 <tr>
                                     <td>
-                                        <font face="Verdana" size="2"><a target="_blank" href="http://www.arfaian.com/download/agb_arfaian.pdf">
+                                        <font face="Verdana" size="2"><a target="_blank" href="http://www.nuts-creeck-archery.com/download/agb_arfaian.pdf">
                                             Allgemeine Geschäftsbedingungen zum DOWNLOAD</a></font><font size='1'><b><span style='font-family: Verdana;
                                                 text-decoration: none'><br>
                                                 <br>
@@ -41,7 +41,7 @@
                                                             Falls die Artikel außerhalb Österreichs geliefert werden sollen, ist es nötig, die
                                                             Telefonnummer anzugeben.<br>
                                                             <br>
-                                                            Weitere Informationen finden Sie im Punkt <a href='http://www.arfaian.com/default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Lieferung'>
+                                                            Weitere Informationen finden Sie im Punkt <a href='http://www.nuts-creeck-archery.com/default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Lieferung'>
                                                                 Lieferung</a> unter Resources.<br>
                                                         </font><font size='1' face='Verdana'>
                                                             <br>
@@ -216,7 +216,7 @@
                                                     <br>
                                                     <br>
                                                     <br>
-                                                    <a href='http://www.arfaian.com/download/AGB_arfaian.pdf'>Klicken Sie hier um die AGB's
+                                                    <a href='http://www.nuts-creeck-archery.com/download/AGB_arfaian.pdf'>Klicken Sie hier um die AGB's
                                                         zu downloaden.</a><br>
                                                     <br>
                                                 </font>
