--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_GESETZ.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_GESETZ.htm
@@ -2,7 +2,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>arfaian.com PRO'S PRO MX-5</title>
+<title>www.nuts-creeck-archery.com PRO'S PRO MX-5</title>
 </head>
 
 <body>
@@ -10,8 +10,8 @@
 <table border="0" width="750" id="table1" cellspacing="0" cellpadding="0">
 	<tr>
 		<td><br>
-		<a href="http://www.arfaian.com/download/Informationen_Fernabsatz.pdf">
-        <font face="Verdana" size="2">I</font></a><font size="2" face="Verdana"><a target="_blank" href="http://www.arfaian.com/download/Informationen_Fernabsatz.pdf">nformationen zum Fernabsatz zum DOWNLOAD</a></font></td>
+		<a href="http://www.nuts-creeck-archery.com/download/Informationen_Fernabsatz.pdf">
+        <font face="Verdana" size="2">I</font></a><font size="2" face="Verdana"><a target="_blank" href="http://www.nuts-creeck-archery.com/download/Informationen_Fernabsatz.pdf">nformationen zum Fernabsatz zum DOWNLOAD</a></font></td>
 	</tr>
 	<tr>
 		<td>&nbsp;</td>
