--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_NewAccount.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_NewAccount.htm
@@ -35,7 +35,7 @@ span.SpellE
 			<div class="Section1">
 				<p class="MsoNormal"><font face="Verdana" size="2">
 				<span style="font-size: 8pt; font-family: Verdana">Ja, ich 
-				möchte über Neuigkeiten bei arfaian.com per E-Mail informiert 
+				möchte über Neuigkeiten bei www.nuts-creeck-archery.com per E-Mail informiert 
 				werden. 
                     <br />
                     Selbstverständlich können Sie diesen Service jederzeit 
